--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link current" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -81,108 +83,180 @@
           <h2 class="visually-hidden">Services</h2>
           <ul class="services-list list">
             <li class="services-item">
-              <img
-                src="./images/portfolio-img0.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img0.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Banking App Interface Concept</h3>
                 <p class="services-pre-title">App</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img1.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img1.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Cashless Payment</h3>
                 <p class="services-pre-title">Marketing</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img2.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img2.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Meditaion App</h3>
                 <p class="services-pre-title">App</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img3.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img3.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Taxi Service</h3>
                 <p class="services-pre-title">Marketing</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img4.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img4.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Screen Illustrations</h3>
                 <p class="services-pre-title">Design</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img5.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img5.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Online Courses</h3>
                 <p class="services-pre-title">Marketing</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img6.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img6.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Instagram Stories Concept</h3>
                 <p class="services-pre-title">Design</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img7.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img7.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Organic Food</h3>
                 <p class="services-pre-title">Web Site</p>
               </div>
             </li>
             <li class="services-item">
-              <img
-                src="./images/portfolio-img8.jpg"
-                alt=""
-                width="360"
-                height="300"
-              />
+              <div class="services-list-wrap">
+                <img
+                  src="./images/portfolio-img8.jpg"
+                  alt=""
+                  width="360"
+                  height="300"
+                />
+                <p class="services-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="box">
                 <h3 class="services-title">Fresh Coffee</h3>
                 <p class="services-pre-title">Web Site</p>
