--- a/index.html
+++ b/index.html
@@ -399,5 +399,10 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+<button type="button" class="modal-close">X</button>
+      </div>
+    </div>
   </body>
 </html>
